# analyst0-mvp

./: .gitignore  README.md  docker-compose-auto-startup.sh  docker-compose.yml  package.json  persistent-chat-implementation-checklist.md
ai-backend/: .env.template  .flake8  .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  notes.md  pyproject.toml  pytest.ini  readme.md  requirements.txt  requirements_dev.txt
ai-backend/alembic/: env.py
ai-backend/alembic/versions/: 633b8a784109_changed_the_usage_feature_to_enum_and_.py  77f3c5e4996c_added_created_date_and_updated_date_in_.py  822b67e4c218_added_usage_type_usage_feature_and_.py  84d6c71e8a2d_added_sqlite_to_data_source_type.py  851c6e4bc7f3_updated_organisation_models_1.py  974c41ff4502_added_organisation_usage_tables.py  bbebf08917c2_updated_organisation_model_daily_and_.py  c1248723b062_baseline.py  d9e50075e5f9_updated_organisation_models.py  f11c37cbfac2_added_example_questions_charter.py
ai-backend/src/: __init__.py  database.py  main.py  settings.py
ai-backend/src/email_templates/: email_verification.html
ai-backend/src/middleware/: error_handler.py  wrap_response.py
ai-backend/src/prompts/: charter_example_explanation.py  charter_metric_description.py  charter_metric_example_explanation.py  data_entity_metadata_prompts.py  generate_analytics_query.py  generate_analytics_query_on_error.py  verify_analytics_query.py
ai-backend/src/utils/: array_utils.py  db_utils.py  logger.py  security.py  (+2 more)
ai-backend/super_analyst_backend.egg-info/: PKG-INFO  SOURCES.txt
ai-backend/tests/: conftest.py
(+366 files in other folders)
